# MediLedger-Nexus-Backend

./: .gitignore  Procfile  README.md  api_demo.py  api_demo_comprehensive.py  app.py  demo_results.json  pyproject.toml  pytest.ini  render-free-tier.yaml  render.yaml  requirements.txt  setup.py  start.sh  wsgi.py
archive/: README.md
archive/encryption/: encryption_demo.py  generate_encryption_key.py
archive/hedera/: create_hedera_account.js  generate_hedera_keys.py  generate_keys.js  update_env_with_keys.py
backend/: .env.template  DEPLOYMENT.md  README.md  gunicorn.conf.py  render-full.yaml  requirements-minimal.txt  requirements.txt  start.sh  wsgi.py
backend/src/mediledger_nexus/: main.py
backend/src/mediledger_nexus/ai/: __init__.py
backend/src/mediledger_nexus/api/: __init__.py  routes.py
backend/src/mediledger_nexus/blockchain/: __init__.py  hcs_service.py  hedera_client.py  hts_service.py  smart_contracts.py  zk_proofs.py
backend/src/mediledger_nexus/core/: config.py
backend/src/mediledger_nexus/schemas/: auth.py  consent.py  emergency.py  health_vault.py  medical_record.py  medical_records.py  research.py
backend/src/mediledger_nexus/security/: encryption.py
backend/src/mediledger_nexus/services/: auth.py  blockchain.py  consent.py  emergency.py  encryption.py  federated_learning.py  hcs_agent.py  health_vault.py  ipfs.py  medical_records.py  research.py  user.py
backend/src/mediledger_nexus/utils/: __init__.py  validators.py
backend/tests/unit/: test_ai_services.py  test_helpers.py  test_security.py
circuits/: basic_test.zok  consent_proof.zok  emergency_access.zok  health_data_validator.zok  health_data_validator_fixed.zok  health_validator.zok  research_data_anonymizer.zok  simple_health_check.zok
contracts/: ConsentManager.sol  EmergencyAccess.sol  HealthVault.sol  README.md  ResearchStudy.sol  deployed_addresses.env  deployment.env  foundry.toml
contracts/cache/: test-failures
contracts/script/: Deploy.s.sol
contracts/temp_tests/: SimpleTest.sol  TestHealthVault.sol  TestResearchStudy.sol
contracts/test/: TestConsentManager.sol  TestEmergencyAccess.sol  TestResearchStudy.sol
docs/: DEPLOYMENT_BACKEND.md  DEPLOYMENT_CONTRACTS.md  MediLedgerNexusPRD.md
src/mediledger_nexus/: __init__.py  main.py
src/mediledger_nexus/ai/: federated_learning.py
src/mediledger_nexus/api/endpoints/: auth.py  consent.py  emergency.py  health_vault.py  medical_records.py  (+1 more)
src/mediledger_nexus/blockchain/: hedera_client.py  smart_contracts.py
src/mediledger_nexus/core/: __init__.py  database.py  logging.py
src/mediledger_nexus/models/: __init__.py  health_vault.py  user.py
src/mediledger_nexus/schemas/: __init__.py  ai_diagnostics.py
src/mediledger_nexus/security/: __init__.py
src/mediledger_nexus/services/: ai_diagnostics.py  groq_ai.py
src/mediledger_nexus/utils/: constants.py  formatters.py  helpers.py  validators.py
tests/: README.md  __init__.py  conftest.py  run_all_tests.py
tests/encryption/: test_aes_encryption.py  test_key_generation.py
tests/fixtures/: __init__.py
tests/hedera/: .env.template  simple_hedera_test.py  test_hedera_integration.py
tests/integration/: test_api_integration.py  test_full_workflow.py
tests/unit/: test_auth.py  test_config.py  test_endpoints.py  test_formatters.py  test_models.py  test_services.py  test_validators.py
tests/zk_snarks/: ZK_SNARKS_SUMMARY.md  demo_zk_snarks.py  docker_zokrates.sh  install_zokrates.sh  setup_zk_snarks.py  test_zk_snarks.py  zokrates
zk/basic_test/: out  out.r1cs  out.wtns  witness
zk/health_validator/: out  out.r1cs  out.wtns  witness
(+8 files in other folders)
